Updated '_i18n/pt/_posts/2017-08-12-teste.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-08-12-teste.md
+++ b/_i18n/pt/_posts/2017-08-12-teste.md
@@ -1,6 +1,6 @@
 ---
 layout: manual
-title: Manual de integração
+title: Integration Manual
 description: Integração técnica Gateway Braspag
 search: true
 categories: manual
@@ -9,6 +9,7 @@ tags:
   - Pagador
 language_tabs:
   json: JSON
+  shell: cURL
 ---
 
 # Introduction to Pagador API
@@ -1406,8 +1407,8 @@ curl
 |`CreditCard.SecurityCode`|Text|4|Yes|Security Code (CVV2)|
 |`CreditCard.Brand`|Text|10|Yes|Card's Brand|
 |`CreditCard.SaveCard`|Boolean|---|No (Default false)|If the card must be saved, then true. Else false.|
-|`FraudAnalysis.Sequence`|Text|14|Yes|Possible values:<UL><LI>AnalyseFirst</LI><LI>AuthorizeFirst</LI></UL>|
-|`FraudAnalysis.SequenceCriteria`|Text|9|Yes|Flow criteria.<BR><UL><LI>OnSuccess - on success of chosen sequence</LI><LI>Always - analyse independently the result of chosen sequence</LI></UL>|
+|`FraudAnalysis.Sequence`|Text|14|Yes|Possible values:<br>AnalyseFirst<br>AuthorizeFirst<br>|
+|`FraudAnalysis.SequenceCriteria`|Text|9|Yes|Flow criteria.<br>OnSuccess - on success of chosen sequence<br>Always - analyse independently the result of chosen sequence<br>|
 |`FraudAnalysis.CaptureOnLowRisk`|Boolean|---|No|When true, the capture process will occur automaticlly when the fraud risk is low (Accept). In case of hight risk or review state, the flow will be the default. To use this flow, the Sequence must be "AuthorizeFirst"|
 |`FraudAnalysis.VoidOnHighRisk`|Boolean|---|No|When true, the void process will occur automaticlly when the fraud risk is hiht (Reject). In case of low risk or review state, the flow will be the default. To use this flow, the Sequence must be "AuthorizeFirst|
 |`FraudAnalysis.FingerPrintId`|Text|50|Yes|The id that indentifies the user’s browser. This ID must be used in the SESSIONID field in the script|
@@ -1418,29 +1419,29 @@ curl
 |`FraudAnalysis.Browser.Type`|Text|40|No|Browser’s name used by the customer|
 |`FraudAnalysis.Cart.IsGift`|Boolean|---|No|Boolean indicates if the order is a gift or not|
 |`FraudAnalysis.Cart.ReturnsAccepted`|Boolean|---|No|Boolean that defines if returns are accepted for the request|
-|`FraudAnalysis.Items.GiftCategory`|Text|9|No|Field that will evaluate the billing address and delivery to different cities, states or countries<BR><UL><LI>Yes (In case of divergence between billing and delivery addresses, mark as low risk)</LI><LI>No (In case of divergence between billing and delivery addresses, mark as hight risk)</LI><LI>Off (Ignores risk analysis for divergent addresses)</LI></UL>|
-|`FraudAnalysis.Items.HostHedge`|Text||No|Importance level of the e-mail and customer IP addresses for risk level<BR><UL><LI>Low (low importance)</LI><LI>Normal (medium importace)</LI><LI>High (very important)</LI><LI>Off (ignore this criteria)</LI></UL>|
-|`FraudAnalysis.Items.NonSensicalHedge`|Text|6|No|Level of tests performed on the customer's data with applications received meaningless <BR><UL><LI>Low (low importance)</LI><LI>Normal (medium importance)</LI><LI>High (very important)</LI><LI>Off (ignore this criteria)</LI></UL>|
-|`FraudAnalysis.Items.ObscenitiesHedge`|Text|6|No|Obscenity level of requests received<BR><UL><LI>Low (low importance)</LI><LI>Normal (medium importance)</LI><LI>High (very important)</LI><LI>Off (ignore this criteria)</LI></UL>|
-|`FraudAnalysis.Items.PhoneHedge`|Text|6|No|Level of testing carried out with phone numbers <BR><UL><LI>Low (Low importance)</LI><LI>Normal (medium importance)</LI><LI>High (very important)</LI><LI>Off (ignore this criteria)</LI></UL>|
+|`FraudAnalysis.Items.GiftCategory`|Text|9|No|Field that will evaluate the billing address and delivery to different cities, states or countries<br>Yes (In case of divergence between billing and delivery addresses, mark as low risk)<br>No (In case of divergence between billing and delivery addresses, mark as hight risk)<br>Off (Ignores risk analysis for divergent addresses)<br>|
+|`FraudAnalysis.Items.HostHedge`|Text||No|Importance level of the e-mail and customer IP addresses for risk level<br>Low (low importance)<br>Normal (medium importace)<br>High (very important)<br>Off (ignore this criteria)<br>|
+|`FraudAnalysis.Items.NonSensicalHedge`|Text|6|No|Level of tests performed on the customer's data with applications received meaningless <br>Low (low importance)<br>Normal (medium importance)<br>High (very important)<br>Off (ignore this criteria)<br>|
+|`FraudAnalysis.Items.ObscenitiesHedge`|Text|6|No|Obscenity level of requests received<br>Low (low importance)<br>Normal (medium importance)<br>High (very important)<br>Off (ignore this criteria)<br>|
+|`FraudAnalysis.Items.PhoneHedge`|Text|6|No|Level of testing carried out with phone numbers <br>Low (Low importance)<br>Normal (medium importance)<br>High (very important)<br>Off (ignore this criteria)<br>|
 |`FraudAnalysis.Items.Name`|Text|255|Yes|Product's Name|
 |`FraudAnalysis.Items.Quantity`|Number|15|Yes|Iten's quantity|
 |`FraudAnalysis.Items.Sku`|Text|255|Yes|Product's SKU Code|
 |`FraudAnalysis.Items.UnitPrice`|Number|15|Yes|Unit Price|
-|`FraudAnalysis.Items.Risk`|Text|6|No|Product risk level <BR><UL><LI>Low (lowr risk)</LI><LI>Normal (medium risk)</LI><LI>High (hight risk)</LI></UL>|
-|`FraudAnalysis.Items.TimeHedge`|Text||No|Importance level of customer order per time of day <BR><UL><LI>Low (lowr risk)</LI><LI>Normal (medium risk)</LI><LI>High (hight risk)</LI><Off (ignore this criteria)</LI></UL>|
-|`FraudAnalysis.Items.Type`|Text||No|Product Type<BR><UL><LI>AdultContent</LI><LI>Coupon</LI><LI>Default</LI><LI>EletronicGood</LI><LI>EletronicSoftware</LI><LI>GiftCertificate</LI><LI>HandlingOnly</LI><LI>Service</LI><LI>ShippingAndHandling</LI><LI>ShippingOnly</LI><LI>Subscription</LI></UL>|
-|`FraudAnalysis.Items.VelocityHedge`|Text|6|No|Importance level of customer purchase frequency<BR><UL><LI>Low (low relevance for last 15 minutes)</LI><LI>Normal (medium relevance for last 15 minutes)</LI><LI>High (hight relevance for last 15 minutes)</LI><LI>Off (ignore this criteria)</LI></UL>|
+|`FraudAnalysis.Items.Risk`|Text|6|No|Product risk level <br>Low (lowr risk)<br>Normal (medium risk)<br>High (hight risk)<br>|
+|`FraudAnalysis.Items.TimeHedge`|Text||No|Importance level of customer order per time of day <br>Low (lowr risk)<br>Normal (medium risk)<br>High (hight risk)</LI><Off (ignore this criteria)<br>|
+|`FraudAnalysis.Items.Type`|Text||No|Product Type<br>AdultContent<br>Coupon<br>Default<br>EletronicGood<br>EletronicSoftware<br>GiftCertificate<br>HandlingOnly<br>Service<br>ShippingAndHandling<br>ShippingOnly<br>Subscription<br>|
+|`FraudAnalysis.Items.VelocityHedge`|Text|6|No|Importance level of customer purchase frequency<br>Low (low relevance for last 15 minutes)<br>Normal (medium relevance for last 15 minutes)<br>High (hight relevance for last 15 minutes)<br>Off (ignore this criteria)<br>|
 |`FraudAnalysis.Items.Passenger.Email`|Text|255|No|Passagen's E-mail Address|
 |`FraudAnalysis.Items.Passenger.Identity`|Text|32|No|Passenger Id to whom the ticket was issued|
 |`FraudAnalysis.Items.Passenger.Name`|Text|120|No|Passenger name|
-|`FraudAnalysis.Items.Passenger.Rating`|Text||No|Passenger classification<BR><UL><LI>Adult</LI><LI>Child</LI><LI>Infant</LI><LI>Youth</LI><LI>Student)</LI><LI>SeniorCitizen</LI><LI>Military</LI></UL>|
+|`FraudAnalysis.Items.Passenger.Rating`|Text||No|Passenger classification<br>Adult<br>Child<br>Infant<br>Youth<br>Student)<br>SeniorCitizen<br>Military<br>|
 |`FraudAnalysis.Items.Passenger.Phone`|Text|15|No|Passenger phone number. For applications outside the US, CyberSource recommends to include the country code 552133665599 (Country Code 55, City Code 21, phone number 33665599)|
 |`FraudAnalysis.Items.Passenger.Status`|Text|32|No|CAirline ranking. One can use values such as Gold or Platinum|
 |`FraudAnalysis.MerchantDefinedFields.Id`|Text|---|Sim (se aplicável)|Id of the additional information|
 |`FraudAnalysis.MerchantDefinedFields.Value`|Text|255|Sim (se aplicável)|Value of the additional information|
 |`FraudAnalysis.Shipping.Addressee`|Text|255|No|Delivery recipient’s name|
-|`FraudAnalysis.Shipping.Method`|Text||No|Shippint type<BR><UL><LI>SameDay</LI><LI>OneDay</LI><LI>TwoDay</LI><LI>ThreeDay</LI><LI>LowCost(</LI><LI>Pickup</LI><LI>Other</LI><LI>None</LI></UL>|
+|`FraudAnalysis.Shipping.Method`|Text||No|Shippint type<br>SameDay<br>OneDay<br>TwoDay<br>ThreeDay<br>LowCost(<br>Pickup<br>Other<br>None<br>|
 |`FraudAnalysis.Shipping.Phone`|Text|15|No|Delivery recipient’s phone. Ex. 552133665599 (Country Code 55, City Code 21, phone number 33665599)|
 |`FraudAnalysis.Travel.DepartureTime`|DateTime|23|No|Date, hour and minute of flight departure AAAA-MM-DD HH:mm:SS|
 |`FraudAnalysis.Travel.JourneyType`|Text|32|No|Trip type. Ex. "Só Ida", "Só Volta", "Ida e Volta"|
@@ -1760,62 +1761,16 @@ curl
 |`ProviderReturnMessage`|Acquirer or Issuer’s return message|Text|32|57||Text|512|Transação Aprovada|
 |`FraudAnalysis.Id`|Indentificação da Transação no Antifraud|Text|300|Alphanumeric Text|
 |`FraudAnalysis.Status`|Transaction Status|Byte|3|Ex.: 500|
-|`FraudAnalysis.FraudAnalysisReasonCode`|Analysis Reason Code|Byte|---|<UL><LI>100 - Successful operation</LI>
-<LI>101 - There are one or more missed requests fields. Possible action: See the fields that are missing in AntiFraudResponse list.MissingFieldCollection. Resend the request with complete information</LI>
-<LI>102 - One or more request fields contain invalid data. Possible action: See the invalid fields in AntiFraudResponse list.InvalidFieldCollection. Resubmit the request with the correct information</LI>
-<LI>150 - Failure in the general system. Possible action: wait a few minutes and try resending the request</LI>
-<LI>151 - The request was received, but time-out occurred on the server.This error does not include time-out between the client and the server. Possible action: wait a few minutes and try resending the request</LI>
-<LI>152 The request was received, but was time-out. Possible action: wait a few minutes and resubmit the request</LI>
-<LI>202 - Fraud Prevention refused the request because the card has expired. You can also receive this code if the expiration date does not coincide with the date on issuing bank file. If payment processor allows emission credits for expired cards, CyberSource does not limit this functionality. Possible action: Request a card or other method of payment</LI>
-<LI>231 The account number is invalid. Possible action: Request a card or other method of payment</LI>
-<LI>234 - There is a problem with the merchant setup. Possible action: Do not click. Please contact customer support to correct the configuration problem</LI>
-<LI>400 A fraud score exceeds its limit. Possible action: Review the customer’s request</LI>
-<LI>480 The request was scheduled for review by Decision Manager</LI>
-<LI>481 - The request was rejected by Manager decision</LI></UL>|
-|`FraudAnalysis.ReplyData.AddressInfoCode`|Codes that identifies the error in Addresses|Text|255|Ex: COR-BA^MM-BIN<br /><UL><LI>COR-BA - The billing address can be normalized</LI>
-<LI>COR-SA - The delivery address can be normalized</LI>
-<LI>INTL-BA - The billing country is outside the US
-<LI>INTL-SA - Delivery country is outside the US
-<LI>MIL-USA - This is a military address in the US
-<LI>MM-A - billing and shipping addresses use different street names</LI>
-<LI>MM-BIN - The BIN card (the first six digits number) does not match the country</LI>
-<LI>MM-C - The billing and delivery addresses use different cities</LI>
-<LI>MM-CO - The billing and delivery addresses use different countries</LI>
-<LI>MM-ST - The billing and delivery addresses use different states</LI>
-<LI>MM-Z - The billing and delivery addresses use different zip codes</LI>
-<LI>UNV-ADDR - The address is unverifiable</LI></UL>|
-|`FraudAnalysis.ReplyData.FactorCode`|Codes that identifies the score level of an order|Text|100|Ex: B^D^R^Z<br /><UL><LI>A - Excessive Change of Address.The customer has changed the billing address two or more times in the last six months.</LI>
-<LI>B - BIN card or risk authorization. Risk factors are related to credit card and BIN / or card authorization checks.</LI>
-<LI>C - High numbers of credit cards.The customer has used more than six numbers of credit cards in the past six months.</LI>
-<LI>D - Impact of the e-mail address.The customer uses a free email provider or e-mail address is risky.</LI>
-<LI>E - Positive list. The customer is in its positive list.</LI>
-<LI>F - Negative list. The account number, address, email address or IP address for this purpose appears in its negative list.</LI>
-<LI>G - geolocation inconsistencies.The email client domain, phone number, billing address, shipping address or IP address is suspect.</LI>
-<LI>H - excessive name changes.The customer changed its name twice or more in the past six months.</LI>
-<LI>I - Internet inconsistencies.The IP address and e-mail domain are not consistent with the billing address.</LI>
-<LI>N - Entrance meaningless.The customer name and address fields contain meaningless words or language.</LI>
-<LI>The - obscenities.Customer data contains obscene words.</LI>
-<LI>P - morphing identity. Various amounts of an identity element are attached to a different value of an identity element. For example, various telephone numbers are connected to a single account number.</LI>
-<LI>Q - Inconsistencies phone. The customer’s phone number is suspect.</LI>
-<LI>R - risky Order.The transaction, the customer and the merchant show information correlated high risk.</LI>
-<LI>T - Time Coverage. The client is attempting a purchase outside the expected time.</LI>
-<LI>U - unverifiable address. The billing address or delivery can not be verified.</LI>
-<LI>V - Velocity.The account number was used many times in the last 15 minutes.</LI>
-<LI>W - marked as suspect. The billing address and delivery is similar to an address previously marked suspect.</LI>
-<LI>Y - The address, city, state or country of billing and shipping addresses do not correlate.</LI>
-<LI>Z - Invalid value. As the request it contains an unexpected value, a default value has been replaced. Although the transaction can still be processed, examine the application carefully to detect abnormalities.</LI></UL>|
+|`FraudAnalysis.FraudAnalysisReasonCode`|Analysis Reason Code|Byte|---|<br>100 - Successful operation<br><br>101 - There are one or more missed requests fields. Possible action: See the fields that are missing in AntiFraudResponse list.MissingFieldCollection. Resend the request with complete information<br><br>102 - One or more request fields contain invalid data. Possible action: See the invalid fields in AntiFraudResponse list.InvalidFieldCollection. Resubmit the request with the correct information<br><br>150 - Failure in the general system. Possible action: wait a few minutes and try resending the request<br><br>151 - The request was received, but time-out occurred on the server.This error does not include time-out between the client and the server. Possible action: wait a few minutes and try resending the request<br><br>152 The request was received, but was time-out. Possible action: wait a few minutes and resubmit the request<br><br>202 - Fraud Prevention refused the request because the card has expired. You can also receive this code if the expiration date does not coincide with the date on issuing bank file. If payment processor allows emission credits for expired cards, CyberSource does not limit this functionality. Possible action: Request a card or other method of payment<br><br>231 The account number is invalid. Possible action: Request a card or other method of payment<br><br>234 - There is a problem with the merchant setup. Possible action: Do not click. Please contact customer support to correct the configuration problem<br><br>400 A fraud score exceeds its limit. Possible action: Review the customer’s request<br><br>480 The request was scheduled for review by Decision Manager<br><br>481 - The request was rejected by Manager decision<br>|
+|`FraudAnalysis.ReplyData.AddressInfoCode`|Codes that identifies the error in Addresses|Text|255|Ex: COR-BA^MM-BIN<br /><br>COR-BA - The billing address can be normalized<br><br>COR-SA - The delivery address can be normalized<br><br>INTL-BA - The billing country is outside the US<br>INTL-SA - Delivery country is outside the US<br>MIL-USA - This is a military address in the US<br>MM-A - billing and shipping addresses use different street names<br><br>MM-BIN - The BIN card (the first six digits number) does not match the country<br><br>MM-C - The billing and delivery addresses use different cities<br><br>MM-CO - The billing and delivery addresses use different countries<br><br>MM-ST - The billing and delivery addresses use different states<br><br>MM-Z - The billing and delivery addresses use different zip codes<br><br>UNV-ADDR - The address is unverifiable<br>|
+|`FraudAnalysis.ReplyData.FactorCode`|Codes that identifies the score level of an order|Text|100|Ex: B^D^R^Z<br /><br>A - Excessive Change of Address.The customer has changed the billing address two or more times in the last six months.<br><br>B - BIN card or risk authorization. Risk factors are related to credit card and BIN / or card authorization checks.<br><br>C - High numbers of credit cards.The customer has used more than six numbers of credit cards in the past six months.<br><br>D - Impact of the e-mail address.The customer uses a free email provider or e-mail address is risky.<br><br>E - Positive list. The customer is in its positive list.<br><br>F - Negative list. The account number, address, email address or IP address for this purpose appears in its negative list.<br><br>G - geolocation inconsistencies.The email client domain, phone number, billing address, shipping address or IP address is suspect.<br><br>H - excessive name changes.The customer changed its name twice or more in the past six months.<br><br>I - Internet inconsistencies.The IP address and e-mail domain are not consistent with the billing address.<br><br>N - Entrance meaningless.The customer name and address fields contain meaningless words or language.<br><br>The - obscenities.Customer data contains obscene words.<br><br>P - morphing identity. Various amounts of an identity element are attached to a different value of an identity element. For example, various telephone numbers are connected to a single account number.<br><br>Q - Inconsistencies phone. The customer’s phone number is suspect.<br><br>R - risky Order.The transaction, the customer and the merchant show information correlated high risk.<br><br>T - Time Coverage. The client is attempting a purchase outside the expected time.<br><br>U - unverifiable address. The billing address or delivery can not be verified.<br><br>V - Velocity.The account number was used many times in the last 15 minutes.<br><br>W - marked as suspect. The billing address and delivery is similar to an address previously marked suspect.<br><br>Y - The address, city, state or country of billing and shipping addresses do not correlate.<br><br>Z - Invalid value. As the request it contains an unexpected value, a default value has been replaced. Although the transaction can still be processed, examine the application carefully to detect abnormalities.<br>|
 |`FraudAnalysis.ReplyData.Score`|Order's total risk score|Number|---|Number|
 |`FraudAnalysis.ReplyData.BinCountry`|Country Code|Text|2|us|
 |`FraudAnalysis.ReplyData.CardIssuer`|Issuer's name|Text|128|Bradesco|
-|`FraudAnalysis.ReplyData.CardScheme`|Card Brand|Text|20|<ul><li>MaestroInternational - Maestro International</li><li>MaestroUkDomestic - Maestro UK Domestic</li><li>MastercardCredit - MasterCard Credit</li><li>MastercardDebit - MasterCard Debit</li><li>VisaCredit - Visa Credit</li><li>VisaDebit - Visa Debit</li><li>VisaElectron - Visa Electron</li></ul>|
+|`FraudAnalysis.ReplyData.CardScheme`|Card Brand|Text|20|<br>MaestroInternational - Maestro International<br><br>MaestroUkDomestic - Maestro UK Domestic<br><br>MastercardCredit - MasterCard Credit<br><br>MastercardDebit - MasterCard Debit<br><br>VisaCredit - Visa Credit<br><br>VisaDebit - Visa Debit<br><br>VisaElectron - Visa Electron<br>|
 |`FraudAnalysis.ReplyData.HostSeverity`|Risk level of the buyer’s e-mail domain, 0-5, where 0 is unlimited risk and 5 is the highest risk|Number|---|5|
-|`FraudAnalysis.ReplyData.InternetInfoCode`|Sequence of codes that indicate that there is an excessive change in the buyer’s identity. The codes are concatenated using the ^.|Text|255|Ex: <br /><LI>MORPH-B - The same billing address has been used several times with multiple client identities</LI>
-<LI>MORPH-C - The same account number has been used several times with multiple client identities</LI>
-<LI>MORPH-E - The same e-mail address has been used several times with multiple client identities
-<LI>MORPH I - The same IP address has been used multiple times with multiple clients identities</LI>
-<LI>MORPH-P - The same phone number has been used several times with multiple client identities</LI>
-<LI>MORPH-S - The same delivery address has been used multiple times with multiple clients identities</LI>|
-|`FraudAnalysis.ReplyData.IpRoutingMethod`|IP routing type used by the computer|Text|---|<ul><li>Anonymizer</li><li>AolBased</li><li>CacheProxy</li><li>Fixed</li><li>InternationalProxy</li><li>MobileGateway</li><li>Pop</li><li>RegionalProxy</li><li>Satellite</li><li>SuperPop</li></ul>|
+|`FraudAnalysis.ReplyData.InternetInfoCode`|Sequence of codes that indicate that there is an excessive change in the buyer’s identity. The codes are concatenated using the ^.|Text|255|Ex: <br /><br>MORPH-B - The same billing address has been used several times with multiple client identities<br><br>MORPH-C - The same account number has been used several times with multiple client identities<br><br>MORPH-E - The same e-mail address has been used several times with multiple client identities<br>MORPH I - The same IP address has been used multiple times with multiple clients identities<br><br>MORPH-P - The same phone number has been used several times with multiple client identities<br><br>MORPH-S - The same delivery address has been used multiple times with multiple clients identities<br>|
+|`FraudAnalysis.ReplyData.IpRoutingMethod`|IP routing type used by the computer|Text|---|<br>Anonymizer<br><br>AolBased<br><br>CacheProxy<br><br>Fixed<br><br>InternationalProxy<br><br>MobileGateway<br><br>Pop<br><br>RegionalProxy<br><br>Satellite<br><br>SuperPop<br>|
 |`FraudAnalysis.ReplyData.ScoreModelUsed`|Name score of model used|Text|20|Ex: default_lac|
 |`FraudAnalysis.ReplyData.CasePriority`|If the merchant is subscriber Enhanced Case Management, you receive this value with the level of priority, with 1 being the highest and 5 the lowest|Number|---|3|
 
@@ -2161,8 +2116,8 @@ curl
 |`Payment.ExtraDataCollection.Name`|Text|50|No|Extra Data field's name|
 |`Payment.ExtraDataCollection.Value`|Text|1024|No|Extra Data field's value|
 |`CreditCard.SaveCard`Boolean|---|No (Default false)|If the card must be saved, then true. Else false|
-|`FraudAnalysis.Sequence`|Text|14|Yes|Possible values:<UL><LI>AnalyseFirst</LI><LI>AuthorizeFirst</LI></UL>|
-|`FraudAnalysis.SequenceCriteria`|Text|9|Yes|Flow criteria.<BR><UL><LI>OnSuccess - on success of chosen sequence</LI><LI>Always - analyse independently the result of chosen sequence</LI></UL>|
+|`FraudAnalysis.Sequence`|Text|14|Yes|Possible values:<br>AnalyseFirst<br><br>AuthorizeFirst<br>|
+|`FraudAnalysis.SequenceCriteria`|Text|9|Yes|Flow criteria.<BR><br>OnSuccess - on success of chosen sequence<br><br>Always - analyse independently the result of chosen sequence<br>|
 |`FraudAnalysis.Provider`|Text|15|Yes|Fraud Prevention provider's name (Ex.: RedShield, Cybersource, etc)|
 |`FraudAnalysis.CaptureOnLowRisk`Boolean|---|When true, the capture process will occur automaticlly when the fraud risk is low (Accept). In case of hight risk or review state, the flow will be the default. To use this flow, the Sequence must be "AuthorizeFirst"|
 |`FraudAnalysis.VoidOnHighRisk`Boolean|---|No|When true, the void process will occur automaticlly when the fraud risk is hiht (Reject). In case of low risk or review state, the flow will be the default. To use this flow, the Sequence must be "AuthorizeFirst|
@@ -2204,19 +2159,19 @@ in risk assessment. High - High significance of the purchaser's order obscenitie
 |`FraudAnalysis.Items.Quantity`|Number|15|Yes|Iten's quantity|
 |`FraudAnalysis.Items.Sku`|Text|255|Yes|Product's SKU Code|
 |`FraudAnalysis.Items.UnitPrice`|Number|15|Yes|Unit Price|
-|`FraudAnalysis.Items.Risk`|Text|6|No|Product risk level <BR><UL><LI>Low (lowr risk)</LI><LI>Normal (medium risk)</LI><LI>High (hight risk)</LI></UL>|
-|`FraudAnalysis.Items.TimeHedge`|Text||No|Importance level of customer order per time of day <BR><UL><LI>Low (lowr risk)</LI><LI>Normal (medium risk)</LI><LI>High (hight risk)</LI><Off (ignore this criteria)</LI></UL>|
-|`FraudAnalysis.Items.Type`|Text||No|Product Type<BR><UL><LI>AdultContent</LI><LI>Coupon</LI><LI>Default</LI><LI>EletronicGood</LI><LI>EletronicSoftware</LI><LI>GiftCertificate</LI><LI>HandlingOnly</LI><LI>Service</LI><LI>ShippingAndHandling</LI><LI>ShippingOnly</LI><LI>Subscription</LI></UL>|
-|`FraudAnalysis.Items.VelocityHedge`|Text|6|No|Importance level of customer purchase frequency<BR><UL><LI>Low (low relevance for last 15 minutes)</LI><LI>Normal (medium relevance for last 15 minutes)</LI><LI>High (hight relevance for last 15 minutes)</LI><LI>Off (ignore this criteria)</LI></UL>|
+|`FraudAnalysis.Items.Risk`|Text|6|No|Product risk level <BR><br>Low (lowr risk)<br><br>Normal (medium risk)<br><br>High (hight risk)<br>|
+|`FraudAnalysis.Items.TimeHedge`|Text||No|Importance level of customer order per time of day <BR><br>Low (lowr risk)<br><br>Normal (medium risk)<br><br>High (hight risk)<br><Off (ignore this criteria)<br>|
+|`FraudAnalysis.Items.Type`|Text||No|Product Type<BR><br>AdultContent<br><br>Coupon<br><br>Default<br><br>EletronicGood<br><br>EletronicSoftware<br><br>GiftCertificate<br><br>HandlingOnly<br><br>Service<br><br>ShippingAndHandling<br><br>ShippingOnly<br><br>Subscription<br>|
+|`FraudAnalysis.Items.VelocityHedge`|Text|6|No|Importance level of customer purchase frequency<BR><br>Low (low relevance for last 15 minutes)<br><br>Normal (medium relevance for last 15 minutes)<br><br>High (hight relevance for last 15 minutes)<br><br>Off (ignore this criteria)<br>|
 |`FraudAnalysis.Items.Passenger.Email`|Text|255|No|Passagen's E-mail Address|
 |`FraudAnalysis.Items.Passenger.Identity`|Text|32|No|Passenger Id to whom the ticket was issued|
 |`FraudAnalysis.Items.Passenger.Name`|Text|120|No|Passenger's name|
-|`FraudAnalysis.Items.Passenger.Rating`|Text||No|Passenger classification<BR><UL><LI>Adult</LI><LI>Child</LI><LI>Infant</LI><LI>Youth</LI><LI>Student)</LI><LI>SeniorCitizen</LI><LI>Military</LI></UL>|
+|`FraudAnalysis.Items.Passenger.Rating`|Text||No|Passenger classification<BR><br>Adult<br><br>Child<br><br>Infant<br><br>Youth<br><br>Student)<br><br>SeniorCitizen<br><br>Military<br>|
 |`FraudAnalysis.Items.Passenger.Phone`|Text|15|No|Delivery recipient’s phone. Ex. 552133665599 (Country Code 55, City Code 21, phone number 33665599)|
 |`FraudAnalysis.Items.Passenger.Status`|Text|32|No|Airline ranking. One can use values such as Gold or Platinum|
 |`FraudAnalysis.Shipping.Addressee`|Text|61|No|Delivery recipient’s name|
 |`FraudAnalysis.Shipping.Email`|Text|60|No|Delivery recipient’s email|
-|`FraudAnalysis.Shipping.Method`|Text|16|No|Shippint type<BR><UL><LI>SameDay</LI><LI>OneDay</LI><LI>TwoDay</LI><LI>ThreeDay</LI><LI>LowCost(</LI><LI>Pickup</LI><LI>Other</LI><LI>None</LI></UL>|
+|`FraudAnalysis.Shipping.Method`|Text|16|No|Shippint type<BR><br>SameDay<br><br>OneDay<br><br>TwoDay<br><br>ThreeDay<br><br>LowCost(<br><br>Pickup<br><br>Other<br><br>None<br>|
 |`FraudAnalysis.Shipping.Phone`|Text|15|No|Delivery recipient’s phone. Ex. 552133665599 (Country Code 55, City Code 21, phone number 33665599)|
 |`FraudAnalysis.CustomConfiguration.MerchantWebsite`|Text|60|No|Merchant website|
 |`FraudAnalysis.Travel.Route`|Text|255|No|Route trip. Concatenation of flight connections in ORIG1- DEST1 format|
@@ -3926,6 +3881,7 @@ curl
 ## Creating a transaction
 
 To create a debit card transaction, you must request just linke a credit card transaction, however, it is mandatory to submit it to the authentication process. Currently, only "Cielo" or "Cielo30" providers support this kind of transaction using Pagador.
+
 ### Request
 
 <aside class="request"><span class="method post">POST</span> <span class="endpoint">/v2/sales/</span></aside>
@@ -4110,7 +4066,7 @@ curl
 |`AuthenticationUrl`|Authentication URL to be sent to the customer|Text|56|https://qasecommerce.cielo.com.br/web/index.cbmp?id=13fda1da8e3d90d3d0c9df8820b96a7f|
 
 # Electronic Transfer Payments
-   
+
 ## Creating a transaction
 
 To create an electronic transfer payment (known as Online Debit as well), it is necessary make a POST as presented below.
@@ -5263,7 +5219,7 @@ curl
 HTTP Status 200
 ```
 
-See [HTTP Status Code](#http-status-code). This list contains all the HTTP Status code that could be returned from API
+See HTTP Status Code. This list contains all the HTTP Status code that could be returned from API
 
 ## Change recurrency end date
 
@@ -5303,7 +5259,7 @@ curl
 HTTP Status 200
 ```
 
-See [HTTP Status Code](#http-status-code). This list contains all the HTTP Status code that could be returned from API
+See HTTP Status Code. This list contains all the HTTP Status code that could be returned from API
 
 ## Chage the recurrency interval
 
@@ -5343,7 +5299,7 @@ curl
 HTTP Status 200
 ```
 
-See [HTTP Status Code](#http-status-code). This list contains all the HTTP Status code that could be returned from API
+See HTTP Status Code. This list contains all the HTTP Status code that could be returned from API
 
 ## Change the recurrency day
 
@@ -5406,7 +5362,7 @@ curl
 HTTP Status 200
 ```
 
-See [HTTP Status Code](#http-status-code). This list contains all the HTTP Status code that could be returned from API
+See HTTP Status Code. This list contains all the HTTP Status code that could be returned from API
 
 ## Change the transaction's amount of a recurrency transaction
 
@@ -5448,7 +5404,7 @@ curl
 HTTP Status 200
 ```
 
-See [HTTP Status Code](#http-status-code). This list contains all the HTTP Status code that could be returned from API
+See HTTP Status Code. This list contains all the HTTP Status code that could be returned from API
 
 ## Change the next payment date
 
@@ -5488,7 +5444,7 @@ curl
 HTTP Status 200
 ```
 
-See [HTTP Status Code](#http-status-code). This list contains all the HTTP Status code that could be returned from API
+See HTTP Status Code. This list contains all the HTTP Status code that could be returned from API
 
 ## Change the payment data
 
@@ -5567,7 +5523,7 @@ curl
 HTTP Status 200
 ```
 
-See [HTTP Status Code](#http-status-code). This list contains all the HTTP Status code that could be returned from API
+See HTTP Status Code. This list contains all the HTTP Status code that could be returned from API
 
 ## Deactivate a Recurrency Payment
 
@@ -5601,7 +5557,7 @@ curl
 HTTP Status 200
 ```
 
-See [HTTP Status Code](#http-status-code). This list contains all the HTTP Status code that could be returned from API
+See HTTP Status Code. This list contains all the HTTP Status code that could be returned from API
 
 ## Reactivate a Recurrency Payment
 
@@ -5635,7 +5591,7 @@ curl
 HTTP Status 200
 ```
 
-See [HTTP Status Code](#http-status-code). This list contains all the HTTP Status code that could be returned from API
+See HTTP Status Code. This list contains all the HTTP Status code that could be returned from API
 
 # Queries
 
@@ -6383,7 +6339,7 @@ Domain:
 ‹merchant ID›: Brsapag will provide you
 ‹session ID›: use the same value used for “DeviceFingerprintID”
 
-###PNG image
+### PNG image
 
 ```html
 ‹p style="background:url(https://h.online-metrix.net/fp/clear.png?org_id=‹org ID›&session_id=‹merchant id›‹session ID›&m=1)"›‹/p›
@@ -6396,7 +6352,7 @@ Domain:
 ‹img src="https://h.online-metrix.net/fp/clear.png?org_id=sample_orgID&session_\id=sample_merchantIDsample_sessionID&m=2" alt=""›
 ```
 
-###Flash code
+### Flash code
 
 ```html
 ‹object type="application/x-shockwave-flash" data="https://h.online-metrix.net/fp/fp.swf?org_id=‹org ID›&session_id=‹merchant id›‹session ID›" width="1" height="1"id="thm_fp"›
@@ -6413,7 +6369,7 @@ Domain:
 ‹/object› 
 ```
 
-###JavaScript code
+### JavaScript code
 
 ```html
 ‹script src="https://h.online-metrix.net/fp/check.js?org_id=‹org ID›&session_
@@ -6428,7 +6384,7 @@ id=‹merchant id›‹session ID›" type="text/javascript"›
 ‹/script› 
 ```
 
-#FAQ
+# FAQ
 
 |Questions|Answeres|Theme|
 |---|---|---|
