Updated '_i18n/pt/_posts/2017-08-12-teste.md' via CloudCannon

--- a/_i18n/pt/_posts/2017-08-12-teste.md
+++ b/_i18n/pt/_posts/2017-08-12-teste.md
@@ -2600,7 +2600,7 @@ in risk assessment. High - High significance of the purchaser's order obscenitie
 |`ProviderReturnMessage`|Acquirer or Issuer’s return message|Text|32|57||Text|512|Transação Aprovada|
 |`FraudAnalysis.Id`|Indentificação da Transação no Antifraud|Text|300|Alphanumeric Text|
 |`FraudAnalysis.Status`|Transaction Status|Byte|3|Ex.: 500|
-|`FraudAnalysis.ReplyData.FactorCode`|Codes that identifies the score level of an order|Text|100|Ex: B^D^R^Z<br /><UL><LI>A - Excessive Change of Address.The customer has changed the billing address two or more times in the last six months.</LI>
+|`FraudAnalysis.ReplyData.FactorCode`|Codes that identifies the score level of an order|Text|100|Ex: B^D^R^Z<br /><br>A - Excessive Change of Address.The customer has changed the billing address two or more times in the last six months.</LI>
 
 ## Saving a Credit Card
 
@@ -4750,7 +4750,7 @@ curl
 |`Payment.Amount`|Number|15|Yes|Transaction Amount (must be sent in cents)|
 |`Payment.Installments`|Number|2|Yes|Number of Installments|
 |`Payment.RecurrentPayment.EndDate`|Text|10 |No|Recurrence end date|
-|`Payment.RecurrentPayment.Interval`|Text|10 |No|Interval between recurrences<br /><ul><li>Monthly (Default) </li><li>Bimonthly </li><li>Quarterly </li><li>SemiAnnual </li><li>Annual</li></ul> |
+|`Payment.RecurrentPayment.Interval`|Text|10 |No|Interval between recurrences<br> (Default) <br>Bimonthly <br>Quarterly <br>SemiAnnual <br>Annual<br> |
 |`Payment.RecurrentPayment.AuthorizeNow`|Boolean|--- |Yes|If set true, the transaction will be authorized at the same time of request. If false, it will be just a scheduled transaction|
 |`CreditCard.CardNumber`|Text|16|Yes|Credit Card number|
 |`CreditCard.Holder`|Text|25|Yes|Cardholder name|
@@ -4908,7 +4908,7 @@ curl
 |`RecurrentPaymentId`|Recurrent Payment ID used to further queries |Guid |36 |xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx |
 |`NextRecurrency`|The next payment date|Text|7 |05/2019 (MM/YYYY) |
 |`EndDate`|Recurrency end date |Text|7 |05/2019 (MM/YYYY) |
-|`Interval`|Recurrency Interval |Text|10 |<ul><li>Monthly</li><li>Bimonthly </li><li>Quarterly </li><li>SemiAnnual </li><li>Annual</li></ul> |
+|`Interval`|Recurrency Interval |Text|10 |<br>Monthly<br>Bimonthly <br>Quarterly <br>SemiAnnual <br>Annual<br> |
 |`AuthorizeNow`|If set true, the transaction will be authorized at the same time of request. If false, it will be just a scheduled transactionBoolean |--- |true ou false |
 
 ## Scheduling a Recurrent Payment
@@ -4996,7 +4996,7 @@ curl
 |`Payment.Installments`|Number|2|Yes|Number of Installments|
 |`Payment.RecurrentPayment.StartDate`|Text|10 |No|Recurrency start date|
 |`Payment.RecurrentPayment.EndDate`|Text|10 |No|Recurrency end date|
-|`Payment.RecurrentPayment.Interval`|Text|10 |No|Interval between recurrencies.<br /><ul><li>Monthly (Default) </li><li>Bimonthly </li><li>Quarterly </li><li>SemiAnnual </li><li>Annual</li></ul> |
+|`Payment.RecurrentPayment.Interval`|Text|10 |No|Interval between recurrencies.<br> (Default) <br>Bimonthly <br>Quarterly <br>SemiAnnual <br>Annual<br> |
 |`Payment.RecurrentPayment.AuthorizeNow`Boolean |--- |Yes|If set true, the transaction will be authorized at the same time of request. If false, it will be just a scheduled transaction|
 |`CreditCard.CardNumber`|Text|16|Yes|Credit Card number|
 |`CreditCard.Holder`|Text|25|Yes|Cardholder name|
@@ -5105,7 +5105,7 @@ curl
 |`NextRecurrency`|The next payment date|Text|7 |05/2019 (MM/YYYY) |
 |`StartDate`|Recurrency start date |Text|7 |05/2019 (MM/YYYY) |
 |`EndDate`|Recurrency end date |Text|7 |05/2019 (MM/YYYY) |
-|`Interval`|Interval between recurrences |Text|10 |<ul><li>Monthly</li><li>Bimonthly </li><li>Quarterly </li><li>SemiAnnual </li><li>Annual</li></ul> |
+|`Interval`|Interval between recurrences |Text|10 |<br>Monthly<br>Bimonthly <br>Quarterly <br>SemiAnnual <br>Annual<br> |
 |`AuthorizeNow`|If set true, the transaction will be authorized at the same time of request. If false, it will be just a scheduled transactionBoolean |--- |true ou false |
 
 ## Change customer's data
@@ -5291,7 +5291,7 @@ curl
 |`MerchantKey`|Merchant Key need to access the API|Text|40|Yes|
 |`RequestId`|Request Identifier defined by merchant, applicable to any operation GET/POST/PUT|Guid|36|No|
 |`RecurrentPaymentId`|Recurrent Payment ID for further queries|Text|50 |Yes|
-|`Interval`|Interval between recurrencies. <ul><li>Monthly</li><li>Bimonthly </li><li>Quarterly </li><li>SemiAnnual </li><li>Annual</li></ul>|Number|2 |Yes|
+|`Interval`|Interval between recurrencies. <br>Monthly<br>Bimonthly <br>Quarterly <br>SemiAnnual <br>Annual<br>|Number|2 |Yes|
 
 ### Response
 
@@ -5993,7 +5993,7 @@ curl
 |`Interval`|Interval between recurrences |Text|10 |
 |`CurrentRecurrencyTry`|Indentify the number of attempts |Number|1|1|
 |`OrderNumber`|Merchant's order number|Text|50 |2017051101|
-|`Status`|Recurrence Status|Number|1 |<UL><LI>1 - Active</LI><LI>2 - Finished</LI><LI>3,4,5 - Disabled</LI></UL> |
+|`Status`|Recurrence Status|Number|1 |<br>1 - Active<br>2 - Finished<br>3,4,5 - Disabled<br> |
 |`RecurrencyDay`|Recurrent Day|Number|2 |22 |
 |`SuccessfulRecurrences`|Number of successful recurrences|Number|2 |5|
 |`RecurrentTransactions.RecurrentPaymentId`|Recurrence ID to further queries|Guid |36 |xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx |
@@ -6388,4 +6388,4 @@ id=‹merchant id›‹session ID›" type="text/javascript"›
 
 |Questions|Answeres|Theme|
 |---|---|---|
-|What is the difference between Status, ReasonCode and ProviderReturnCode?|The answer is:<BR><UL><LI>Status: represents the current status of the transaction.</LI><LI>ReasonCode: represents the status of the request.</LI><LI>ProviderReturnCode: represents the response code from the acquirer or bank.</LI></UL>For example, an authorization request may have a return with ReasonCode = 0 (Sucessfull), ie the request has been successfully completed, but the Status may be 0-Denied, for having the transaction not authorized by the buyer, ProviderReturnCode 57 (one of Cielo's denied codes)|Integration|
+|What is the difference between Status, ReasonCode and ProviderReturnCode?|The answer is:<BR><br>Status: represents the current status of the transaction.<br>ReasonCode: represents the status of the request.<br>ProviderReturnCode: represents the response code from the acquirer or bank.<br>For example, an authorization request may have a return with ReasonCode = 0 (Sucessfull), ie the request has been successfully completed, but the Status may be 0-Denied, for having the transaction not authorized by the buyer, ProviderReturnCode 57 (one of Cielo's denied codes)|Integration|
