--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -32,6 +32,23 @@ Quer conhecer mais sobre o produto Cielo LIO? Acesse: http://cielolio.com.br
 
 Atualmente a Cielo LIO está disponível em 2 modelos: LIO V1 e LIO V2
 
+![Comparação - LIO V1 e LIO V2](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_v1_v2.png)
+
+| LIO V1                                        | LIO V2                                        |
+|-----------------------------------------------|-----------------------------------------------|
+| **1**: Gerencie suas vendas                   | **1**: Gerencie suas vendas                   |
+| **2**: Wi-Fi + 3G                             | **2**: Wi-Fi + 3G                             |
+| **3**: Tela touch                             | **3**: Tela touch                             |
+| **4**: loja de aplicativos Cielo Store        | **4**: loja de aplicativos Cielo Store        |
+| **5**: Sistema operacional Cielo OS (Android) | **5**: Sistema operacional Cielo OS (Android) |
+| **6**: Aceita um monte de cartões             | **6**: Aceita um monte de cartões             |
+| **7**: Teclado físico                         | **7**: Teclado físico                         |
+| **8**: Câmera com leitor de código de barras  | **8**: Câmera com leitor de código de barras  |
+| **9**: Flash integrado                        | **9**: Flash integrado                        |
+| **10**: Carregador                            | **10**: Carregador                            |
+|                                               | **11**: Impressora térmica                    |
+|                                               | **12**: NFC                                   |
+
 Ambos os modelos foram desenvolvidos pela Cielo pensando em atender as necessidades específicas de alguns clientes.
 
 Enquanto a LIO V1 possui um design mais compacto e permite uma maior mobilidade, a LIO V2 foi concebida em um tamanho maior e possui algumas funcionalidades exclusivas e adicionais como por exemplo:
@@ -85,8 +102,9 @@ Todos os protocolos de comunicação e pareamento ficam sob responsabilidade do 
 A plataforma Cielo LIO teve seu sistema operacional próprio baseado em Android.
 Confira abaixo a tabela com as especificações técnicas da Cielo LIO:
 
-| Versão               | LIO v1                                      | LIO v2                                      |
+| | ![LIO V1](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_v1_small.png) | ![LIO V2](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/lio_v2_small.png) |
 |----------------------|---------------------------------------------|---------------------------------------------|
+| Versão               | **LIO V1**                                  | **LIO V2**                                  |
 | Sistema operacional  | Android OS Cielo 5.1.1                      | Android OS Cielo 6.0 (Marshmallow)          |
 | Memória              | 2GB LPDDR3                                  | 1GB LPDDR3                                  |
 | Dual Chip            | Dual SIM Stand-by                           | Dual SIM Stand-by                           |
