--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-tutoriais-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-tutoriais-3.0.md
@@ -80,7 +80,7 @@ Sobre os Filtros:
 |Tipos de meio de pagamento|Grupo de meios de pagamento como Boletos ou cartão de crédito. Não diferencia|bandeira ou banco.|
 |Meios de pagamento|Meio de pagamento especifico usado na transação (EX: Boleto Bradesco)|
 |Análise de Fraude|Qual o status de antifraude da transação no momento da pesquisa|
-|Status da Transação|**Cancelado** - Transação cancelada pelo lojista<br>**Estornado** - Transações canceladas com menos de 24 horas<br>**Não Autorizado** - Transações negadas pelo Autorizador Cielo<br>**Não Pago** - Transações autorizadas, mas não capturadas<br>**Pago** - Transações capturadas<br>|
+|Status da Transação|**Cancelado** - Transação cancelada pelo lojista<br>**Estornado** - Transações canceladas com menos de 24 horas<br>**Não Autorizado** - Transações negadas pelo Autorizador Cielo<br>**Não Pago** - Transações autorizadas, mas não capturadas<br>**Pago** - Transações capturadas|
 
 Os filtros podem ser combinados para realizar uma pesquisa personalizada.
 
